2002-10-20  Per Bothner  <per@bothner.com>

	* kawa/lang/Macro.java (copying <init>):  Copy name as well.

	* kawa/standard/define_alias.java (rewrite):  Simplify.

2002-10-17  Per Bothner  <per@bothner.com>

	* kawa/standard/location.java (rewriteArg):  Removed.  No longer
	needed now that Translator.rewrite doesn't create PrimProcedures.
	(rewrite):  Replace rewriteArg cal by call to Translator.rewrite.
	* kawa/standard/define_alias.java (rewrite):  Likewise.

2002-09-28  Jim White  <jim@pagesmiths.com>

	* build.xml: Compile .scm files for xml-classes.
	Remove unneeded workaround in servlet-classes.

2002-09-27  Per Bothner  <per@bothner.com>

 	* kawa/lang/Translator.java (rewrite):  Only map Procedure to
	
2002-09-27  Per Bothner  <per@bothner.com>

	* kawa/lang/Translator.java (rewrite):  Only map Procedure to
	field Declaration if Compilation.inlineOk.

2002-09-26  Per Bothner  <per@bothner.com>

	* kawa/standard/ScmEnv.java (get):  Follow aliases.
	* kawa/standard/require.java (scanForDefinitions):  Recognize aliases,
	as indicated by the type gnu.mapping.Location.

	* kawa/standard/map.java (applyN):  Handle for-each properly
	when arity is 1.

2002-09-24  Per Bothner  <per@bothner.com>

	* kawa/standard/define.java (scanForDefinitions):  If inlineOk is false,
	mark declaration as writeable, even if functional definition.
	* kawa/repl.java (processArgs):  Set compile.inlineOk to false
	if --no-inline or --inline=none is specified.

	* kawa/repl.java (printOptions):  Also mention --output-format.

	* kawa/repl.java (processArgs):  Update copyright year printed by --version.

2002-09-21  Per Bothner  <per@bothner.com>

	* kawa/lang/Lambda.java (rewrite, rewriteBody):  Use 'matches'
	method of Translator to match against '::'.

	* kawa/standard/Scheme.java (initScheme):  Add define-record-type.

2002-08-22  Per Bothner  <per@bothner.com>

	* kawa/lang/Macro.java (expander):  Change type to Object.
	(getExpander):  Remove unused method.